--- a/molly/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/list.html
@@ -1,35 +1,63 @@
 {% extends "sakai/base.html" %}{% load portal_misc %}
 
+{% block extrahead %}
+<style type="text/css">
+table {
+    background: #dfdfdf;
+    border-collapse:collapse;
+    width: 100%;
+    
+}
+
+table tr {
+    border-top: 1px solid #888;
+}
+
+table tr td {
+    padding: 7px 0;
+}
+
+table tr td.tutorial-date {
+    
+    
+    /*color: #fff;
+    background: #79504A;*/
+}
+</style>
+
+{% endblock %}
+
 {% block pagetitle %}Meetings{% endblock %}
 
 {% block content %}
+
 <div class="section">
+    <div class="header">
     <h2>Available Tutorials</h2>
+    </div>
 {#<ul> #}
 
-<table style="width:100%; border:1px solid #ccc">
+<table>
 {% for event in events %}
 <tr>
-    <td style="text-align:center;">
+    <td class="center tutorial-date">
     {% ifequal event.start|date:"dMY" event.end|date:"dMY" %}
-      {# If start and end time are on the same day #}
-       
+      {# If start and end time are on the same day #}  
       <big>{{ event.start|date:"j M"}}
       {# Only show year if start date is not in this year #}
        {% ifnotequal event.start|date:"Y" now|date:"Y"%}
          {{ event.start|date:"Y"}}
        {% endifnotequal %}
       </big><br />
-      {{ event.start|date:"D"}}<br />
-    
+      
+      <small>{{ event.start|date:"D"}}
       {% ifequal event.start|date:"A" event.end|date:"A"  %}
           {# If start and end times are both am or pm #}
-          <small>{{ event.start|date:"g:i"|lower }}-{{ event.end|date:"g:iA"|lower }}</small>     
+          {{ event.start|date:"g:i"|lower }}-{{ event.end|date:"g:iA"|lower }}     
           {% else %}
-          <small>{{ event.start|date:"g:iA"|lower }}-{{ event.end|date:"g:iA"|lower }}</small>
+          {{ event.start|date:"g:iA"|lower }}-{{ event.end|date:"g:iA"|lower }}
       {% endifequal %}
-    
-      
+       </small>
        
     {% else %}
       {# Handle the rare occurence that tutorials start and end on different days #}
@@ -40,8 +68,8 @@
                 <br />{{ event.end|date:"j M" }}, <small>{{ event.end|date:"g:iA"|lower}}</small>
             {% else %}
             {# Event starts in a different year but finishes in that year too #}
-                {{ event.start|date:"j M" }}, <small>{{ event.start|date:"g:iA"|lower}}</small>-
-                <br />{{ event.end|date:"j M Y" }}, <small>{{ event.end|date:"g:iA"|lower}}</small>
+                {{ event.start|date:"j M y" }}, <small>{{ event.start|date:"g:iA"|lower}}</small>-
+                <br />{{ event.end|date:"j M y" }}, <small>{{ event.end|date:"g:iA"|lower}}</small>
             {% endifequal %}
         {% else %}
             {{ event.start|date:"j M y" }}, <small>{{ event.start|date:"g:iA"|lower}}</small>-
@@ -55,7 +83,7 @@
         <br /> 
         <small>{{ event.start|oxdate:"%(week)s%(ordinal)s Week %(term_long)s Term" }}</small>
     </td>
-    <td>Book</td>
+    <td class="center">Book</td>
 </tr>
 {% comment %}
 <li {% if forloop.last %}class="round-bottom"{% endif %}><a href="{% url sakai:signup-event site,event.id %}">
