--- a/molly/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/index.html
@@ -4,11 +4,15 @@
 
 {% block content %}
 <div class="section">
+    <div class="header">
     <h2>WebLearn</h2>
-    <div class="note"><div class="bubble pad-10">
-     Here you'll see a gradually increasing list of tools you can use from Weblearn.     
-    </div></div>
-<ul>
+    {% if user_details.firstName %}
+        <p>Hello {{ user_details.firstName }}, welcome to mobile Weblearn!</p>
+    {% endif %}
+    <p>Here you can currently fill out Surveys, quickly answer Polls and book Tutorials that you have arranged via Weblearn.</p> 
+    <p>You'll see this section expand and improve over time and we would really like to hear what you think, so do drop us a note via the link at the bottom of the page.</p>
+    </div>
+<ul class="link-list">
 {% for tool in tools %}
   <li><a href="{{ tool.url }}">{{ tool.title }}</a></li>
 {% endfor %}
