--- a/molly/molly/apps/sakai/templates/sakai/signup/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/detail.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <div class="section">
+    <div class="header">
     <h2>{{ event.title }}</h2>
-    
+    </div>
 {# Metadata about the tutorial slots #} 
 <div class="bubble"><div class="article pad-10">   
 <dl>
