--- a/molly/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/list.html
@@ -2,27 +2,46 @@
 
 {% block extrahead %}
 <style type="text/css">
+
+.header {
+    border-bottom: 1px solid #888;
+}
 table {
     background: #dfdfdf;
-    border-collapse:collapse;
+    border-spacing:0;
     width: 100%;
-    
-}
-
-table tr {
-    border-top: 1px solid #888;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-shadow: 0px 1px 1px #fff;
 }
 
 table tr td {
-    padding: 7px 0;
+    border-bottom: 1px solid #888;
+    border-top: 1px solid #fff;
+    
+}
+
+table tr td:last-child {
+    color: #fff;
+    background:#002147 url('{{ MEDIA_URL }}png/icons/list-arrow.png') no-repeat;
+    background-position: right center;
+
+}
+
+table tr td:last-child a {
+    color: #fff;
+    text-decoration:none;
+    display: block;
 }
 
 table tr td.tutorial-date {
-    
-    
     /*color: #fff;
     background: #79504A;*/
 }
+
+table tr:last-child td:first-child {border-bottom-left-radius: 5px;}
+table tr:last-child td:last-child {border-bottom-right-radius: 5px;}
+
 </style>
 
 {% endblock %}
@@ -42,7 +61,9 @@ table tr td.tutorial-date {
 <tr>
     <td class="center tutorial-date">
     {% ifequal event.start|date:"dMY" event.end|date:"dMY" %}
-      {# If start and end time are on the same day #}  
+      {# 1. If start and end time are on the same day #}  
+      
+      {# Date - Month #}
       <big>{{ event.start|date:"j M"}}
       {# Only show year if start date is not in this year #}
        {% ifnotequal event.start|date:"Y" now|date:"Y"%}
@@ -50,6 +71,7 @@ table tr td.tutorial-date {
        {% endifnotequal %}
       </big><br />
       
+      {# Day - Time #}
       <small>{{ event.start|date:"D"}}
       {% ifequal event.start|date:"A" event.end|date:"A"  %}
           {# If start and end times are both am or pm #}
@@ -58,7 +80,8 @@ table tr td.tutorial-date {
           {{ event.start|date:"g:iA"|lower }}-{{ event.end|date:"g:iA"|lower }}
       {% endifequal %}
        </small>
-       
+      {# 1. END #}
+      
     {% else %}
       {# Handle the rare occurence that tutorials start and end on different days #}
         {% ifequal event.start|date:"Y" event.end|date:"Y" %}
@@ -83,32 +106,16 @@ table tr td.tutorial-date {
         <br /> 
         <small>{{ event.start|oxdate:"%(week)s%(ordinal)s Week %(term_long)s Term" }}</small>
     </td>
-    <td class="center">Book</td>
+    <td class="center"><a href="{% url sakai:signup-event site,event.id %}">Book</a></td>
+    
 </tr>
-{% comment %}
-<li {% if forloop.last %}class="round-bottom"{% endif %}><a href="{% url sakai:signup-event site,event.id %}">
 
-{{ event.title }} <small>{{ event.start|oxdate:"%(week)s%(ordinal)s Week %(term_long)s Term" }}</small>
-<br /><small>
-      {% ifequal event.start|date:"dMY" event.end|date:"dMY" %}
-      {# If start and end time are on the same day #}
-        {% ifequal event.start|date:"A" event.end|date:"A"  %}
-            {# If start and end times are both am or pm #}
-            {{ event.start|date:"g:i"|lower }}-{{ event.end|date:"g:iA"|lower }}
-            {{ event.start|date:"D, j F y"}}
-        {% else %}
-            {{ event.start|date:"g:iA"|lower }}-{{ event.end|date:"g:iA"|lower }}
-            {{ event.start|date:"D, j F y"}}
-        {% endifequal %}
-      {% else %}
-      {# Handle the rare occurence that tutorials start and end on different days #}
-        {{ event.start|date:"g:iA"|lower}}{{ event.start|date:"D, j F y" }}-{{ event.end|date:"g:iA"|lower}}{{ event.end|date:"D, j F y" }}
-      {% endifequal %}
-</small>
-</a></li>
-{% endcomment %}
+
+
+
 {% endfor %}
 </table>
 {#</ul>#}
 </div>
 {% endblock %}
+
