--- a/molly/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/list.html
@@ -28,7 +28,7 @@ table tr.new-week td {
 table tr td {
     border-bottom: 1px solid #888;
     border-top: 1px solid #fff;
-    padding: 7px 0;
+    padding: 7px 3px;
     background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee))
 }
 
@@ -49,7 +49,7 @@ div.button {
     background:#002147 url('{{ MEDIA_URL }}png/icons/list-arrow.png') no-repeat;
     background-position: right center;
     
-    margin: 0 5px 0 auto;
+    margin: 0 2px 0 auto;
     min-width: 70px;
     max-width: 100px;
     padding: 3px;
