--- a/molly/molly/auth/templates/auth/secure.html
+++ b/molly/molly/auth/templates/auth/secure.html
@@ -1,7 +1,8 @@
-{% extends "base.xhtml" %}
+{% extends "base.xhtml" %}{% load molly_auth %}
 
 {% block bottom_links %}{{ block.super }}<br/>
   <a href="{% url auth:index %}">Security preferences</a><br/>
-  <a href="{% url auth:clear_session %}?return_url={{ full_path }}">Clear secure session</a>
+  <a href="{% url auth:clear_session %}?return_url={{ full_path }}">Clear secure session</a><br/>
+  Account accessible from {{ user.usersession_set.all.count }} device{{ user.usersession_set.all.count|pluralize }}.
 {% endblock %}
     
