Removed unnecessary load templatetag.

--- a/molly/molly/auth/templates/auth/secure.html
+++ b/molly/molly/auth/templates/auth/secure.html
@@ -1,4 +1,4 @@
-{% extends "base.xhtml" %}{% load molly_auth %}
+{% extends "base.xhtml" %}
 
 {% block bottom_links %}{{ block.super }}<br/>
   <a href="{% url auth:index %}">Security preferences</a><br/>
