--- a/molly/molly/apps/sakai/templates/sakai/evaluation/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/evaluation/detail.html
@@ -2,23 +2,26 @@
 
 {% block content %}
 
-        <div class="section">
-          <h2>Instructions</h2>
-          <div class="bubble pad-10">
-
-{{ instructions|safe }}
-</div>
-</div>
-
-<div class="section">
-  <h2>Questions</h2>
 {% if state_message %}
-  <div class="bubble pad-10">{{ state_message|safe }}</div>
+  <div class="sakai-error-message">{{ state_message|safe }}</div>
 {% endif %}
+
+{% if instructions %}
+  <div class="bubble pad-10">
+    {{ instructions|safe }}
+  </div>
+{% endif %}
+
+{% if questions %}
+
 <form method="post" action="{% url sakai:evaluation-detail id %}">
 {{ questions|safe }}
 
+<p style="text-align:center">
 {{ submitButton|safe }}
+</p>
 </form>
-</div>
+
+{% endif %}
+
 {% endblock %}
