--- a/molly/molly/apps/sakai/templates/sakai/evaluation/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/evaluation/index.html
@@ -9,7 +9,7 @@
     Thank you for taking part in the survey; your responses have been safely submitted.
   </div>
 {% endif %}
-  <ul>
+  <ul class="link-list">
 {% for evaluation in evaluations %}
     <li>
 {% if evaluation.id %}
