--- a/molly/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/index.html
@@ -9,7 +9,7 @@
     {% if user_details.firstName %}
         <p>Hello {{ user_details.firstName }}, welcome to mobile Weblearn!</p>
     {% endif %}
-    <p>Here you can currently fill out Surveys, quickly answer Polls and book Tutorials that you have arranged via Weblearn.</p> 
+    <p>In our Weblearn Mobile preview, you can book timeslots/tutorials that are available on your Weblearn Sign-Ups tool.</p> 
     <p>You'll see this section expand and improve over time and we would really like to hear what you think, so do drop us a note via the link at the bottom of the page.</p>
     </div>
 <ul class="link-list">
