--- a/molly/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/list.html
@@ -70,7 +70,7 @@ div.button {
 
 <div class="section">
     <div class="header">
-    <h2>Available Tutorials</h2>
+    <h2>Available Slots</h2>
     </div>
 {#<ul> #}
 
