Fixed a CSS whoopsie

--- a/molly/molly/apps/sakai/templates/sakai/signup/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/detail.html
@@ -65,7 +65,9 @@ table tr td {
     border-bottom: 1px solid #888;
     border-top: 1px solid #fff;
     padding: 7px 3px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee))
+    background: #eee;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee));
+    background: -moz-linear-gradient(center top, #f3f3f3, #eee);
 }
 
 table tr td:last-child a {
