--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -93,12 +93,13 @@
 {% endblock %}
 
 {% if not hide_feedback_link %}
+<div style="margin-top:15px">
 {% block bottom_links %}
-  <div style="width:50%; float:left; margin-top: 15px; margin-bottom:2px;">
+  <div style="width:50%; float:left; margin-top: 2px; margin-bottom:2px;">
     <a style="margin:0 2px 0 10px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url feedback:index %}?referer={{ full_path|urlencode }}">Provide feedback for this page</a>
   </div>
-  <div style="width:50%; float:left; margin-top: 15px; margin-bottom:2px;">
+  <div style="width:50%; float:left; margin-top: 2px; margin-bottom:2px;">
     <a style="margin:0 10px 0 2px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">2D barcode and shortened link</a>
   </div>
@@ -109,6 +110,7 @@
   <div style="clear:both"> </div>
 
 {% endblock %}
+</div>
 {% endif %}
 
 </div>
