--- a/molly/molly/auth/templates/auth/secure.html
+++ b/molly/molly/auth/templates/auth/secure.html
@@ -1,8 +1,16 @@
 {% extends "base.xhtml" %}
 
-{% block bottom_links %}{{ block.super }}<br/>
+{% block bottom_links %}
+
+  <div style="width:100%; float:left; margin-top: 2px; margin-bottom:2px;">
+    <div style="margin:0 10px 0 10px; background-color:#ffffbf; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
+       href="{% url feature_vote:index %}">
+      <div style="background-image:url('{{ MEDIA_URL }}png/auth/padlock.png'); background-repeat:no-repeat; background-position:left center; padding-left:44px"> 
   <a href="{% url auth:index %}">Security preferences</a><br/>
   <a href="{% url auth:clear_session %}?return_url={{ full_path }}">Clear secure session</a><br/>
   Account accessible from {{ user.usersession_set.all.count }} device{{ user.usersession_set.all.count|pluralize }}. <a href="{% url auth:index %}">Change</a>
+  </div></div>
+  </div>
+  {{ block.super }}
 {% endblock %}
     
