--- a/molly/molly/apps/sakai/templates/sakai/signup/detail.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/detail.html
@@ -11,27 +11,21 @@
 }
 
 .full td {
-    background: #FFD9D6;
-    background: 
-    -webkit-gradient(linear, left top, left bottom, from(#f0e7e1), to(#f0e1d6));
-    background:
-    -moz-linear-gradient(center top, #f0e7e1, #f0e1d6);
+    background: #f0e1d6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f0e7e1), to(#f0e1d6));
+    background: -moz-linear-gradient(center top, #f0e7e1, #f0e1d6);
 }
 
 .waiting-list td {
-    background: #D1FFDA;
-    background: 
-    -webkit-gradient(linear, left top, left bottom, from(#eff0e1), to(#eff0d6));
-    background:
-    -moz-linear-gradient(center top, #eff0e1, #eff0d6);
+    background: #eff0d6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#eff0e1), to(#eff0d6));
+    background: -moz-linear-gradient(center top, #eff0e1, #eff0d6);
 }
 
 .on-waiting-list td {
-    background: #D1FFDA;
-    background: 
-    -webkit-gradient(linear, left top, left bottom, from(#eff0e1), to(#eff0d6));
-    background:
-    -moz-linear-gradient(center top, #eff0e1, #eff0d6);
+    background: #eff0d6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#eff0e1), to(#eff0d6));
+    background: -moz-linear-gradient(center top, #eff0e1, #eff0d6);
 }
 
 </style>
@@ -52,10 +46,9 @@ table {
 
 table tr.new-week td {
     background: #DEE6FF;
-    background: 
-    -webkit-gradient(linear, left top, left bottom, from(#A7BAC7), to(#DEE6FF));
-    background:
-    -moz-linear-gradient(center top, #A7BAC7, #DEE6FF);
+    background: -webkit-gradient(linear, left top, left bottom, from(#A7BAC7), to(#DEE6FF));
+    background:-moz-linear-gradient(center top, #A7BAC7, #DEE6FF);
+
     padding: 5px 5px 5px 7px; 
     border: 0;
     font-size: 1.1em;
@@ -65,6 +58,7 @@ table tr td {
     border-bottom: 1px solid #888;
     border-top: 1px solid #fff;
     padding: 7px 3px;
+
     background: #eee;
     background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee));
     background: -moz-linear-gradient(center top, #f3f3f3, #eee);
