--- a/molly/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/list.html
@@ -15,10 +15,9 @@ table {
 
 table tr.new-week td {
     background: #DEE6FF;
-    background: 
-    -webkit-gradient(linear, left top, left bottom, from(#A7BAC7), to(#DEE6FF));
-    background:
-    -moz-linear-gradient(center top, #A7BAC7, #DEE6FF);
+    background: -webkit-gradient(linear, left top, left bottom, from(#A7BAC7), to(#DEE6FF));
+    background:-moz-linear-gradient(center top, #A7BAC7, #DEE6FF);
+    
     padding: 5px 5px 5px 7px; 
     border: 0;
     font-size: 1.1em;
@@ -28,7 +27,10 @@ table tr td {
     border-bottom: 1px solid #888;
     border-top: 1px solid #fff;
     padding: 7px 3px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee))
+    
+    background: #eee;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee));
+    background: -moz-linear-gradient(center top, #f3f3f3, #eee);
 }
 
 table tr td:last-child a {
