Corrected some of the terminology and text in the sakai app.

--- a/molly/molly/apps/sakai/templates/sakai/poll/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/poll/index.html
@@ -28,8 +28,13 @@
   </div>
 </div>
 {% empty %}
-<div class="content pad-10">
-  There aren't currently any polls.
+<div class="section">
+  <div class="header">
+    <h2>Polls</h2>
+  </div>
+  <div class="section-content">
+    There aren't currently any polls.
+  </div>
 </div>
 {% endfor %}
 
