--- a/molly/molly/apps/sakai/templates/sakai/signup/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/index.html
@@ -1,11 +1,9 @@
 {% extends "sakai/base.html" %}
 
-{% block pagetitle %}Sites{% endblock %}
-
 {% block content %}
 <div class="section">
     <div class="header">
-    <h2>Your Weblearn sites</h2>
+    <h2>Sign-up events by Weblearn site</h2>
     <p>We're still working on a way of only showing you sites that you have tutorials available to book, bear with us in the mean time!</p>
     </div>
 <ul class="link-list">
